--- a/comicteca/templates/comics/comic.html
+++ b/comicteca/templates/comics/comic.html
@@ -31,7 +31,7 @@
          <!-- Colection Image -->
          {% load thumbnail %}
          {% thumbnail comic.my_cover "400" as thumb_image %}
-           <a href="{{ MEDIA_URL }}{{ colection.image }}">
+           <a href="{{ MEDIA_URL }}{{ comic.my_cover }}">
                 <img src="{{ MEDIA_URL }}{{ thumb_image }}" class="image-detail"
                 style="padding:1px;border: thin solid black;">
            </a>
@@ -65,7 +65,7 @@
            <p><u>Format</u>: <strong>{{ comic.format }}</strong></p>
            <p><u>Price</u>: <strong>{{ comic.retail_price }} {{ comic.retail_unit }}</strong>
            {% if comic.purchase_price > 0 %}
-           (paid {{ comic.purchase_price}} {{ comic.purchase_unit}})
+             (paid {{ comic.purchase_price }} {{ comic.purchase_unit }})
            {% endif %}
            </p>
 
