--- a/comicteca/templates/comics/base.html
+++ b/comicteca/templates/comics/base.html
@@ -46,11 +46,47 @@
           <!-- right side of navbar -->
           <ul class="nav navbar-nav navbar-right">
             {% if request.user.is_authenticated %}
-              <p class="navbar-text">
-                <font color="White">Welcome {{ request.user }}</font> |
-                <a href="{% url 'logout' %}">logout</a>
-              </p>
-            {% endif %}
+
+              <li class="dropdown">
+                  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"  aria-expanded="false">
+                  {% if request.user.profile.photo %}
+                      {% load thumbnail %}
+                          {% thumbnail request.user.profile.photo "16" as thumb_image %}
+                          <img src="{{ MEDIA_URL }}{{ thumb_image }}"
+                               class="image-detail"
+                               style="padding:1px;border:thin solid black;">
+                      {% endthumbnail %}
+
+                  {% else %}
+                      <span class="glyphicon glyphicon-user" aria-hidden="true"></span>
+                  {% endif %}
+                  {% if request.user.first_name %}
+                      {{ request.user.first_name }}
+                  {% else %}
+                      {{ request.user.username }}
+                  {% endif %}
+                  <span class="caret"></span>
+                  </a>
+                  <ul class="dropdown-menu" role="menu">
+                      {% if request.user.is_superuser %}
+                        <li><a href="#">Add User</a></li>
+                        <li><a href="#">Admin Action</a></li>
+                        <li><a href="/admin/">Admin page</a></li>
+                        <li class="divider"></li>
+                      {% endif %}
+                      <li><a href="#">Stats</a></li>
+                      <li><a href="{% url 'profile_edit' %}">Edit account</a></li>
+                      <li><a href="{% url 'password_change' %}">Change password</a></li>
+                      <li class="divider"></li>
+                      <li><a href="{% url 'about' %}">About</a></li>
+                      <li class="divider"></li>
+                      <li><a href="{% url 'logout' %}">Logout</a></li>
+                  </ul>
+              </li>
+
+              <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+
+            {% endif %} <!-- end if authenticated -->
           </ul>
         </div>
       </div>
@@ -65,6 +101,16 @@
         </div>
 	<!-- body block -->
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
+        {% if messages %}
+          <ul class="messages">
+            {% for message in messages %}
+              <li class="{{ message.tags }}">
+                {{ message|safe }}
+                <a href="#" class="close">✖</a>
+              </li>
+            {% endfor %}
+          </ul>
+  {% endif %}
           <div>
             {% block body_block %}
             {% endblock %}
