--- a/comicteca/templates/comics/base.html
+++ b/comicteca/templates/comics/base.html
@@ -75,6 +75,7 @@
                         <li class="divider"></li>
                       {% endif %}
                       <li><a href="#">Stats</a></li>
+                      <li><a href="{% url 'user_collection' request.user %}">My Comics</a></li>
                       <li><a href="{% url 'profile_edit' %}">Edit account</a></li>
                       <li><a href="{% url 'password_change' %}">Change password</a></li>
                       <li class="divider"></li>
