Update url in "Add Comics" button inside "collection" template

--- a/comicteca/templates/comics/colection.html
+++ b/comicteca/templates/comics/colection.html
@@ -18,7 +18,7 @@
       <a href="/comicteca/colections/{{ colection.slug }}/delete/" class="btn btn-info" role="button">Delete</a>
     </center></p>
     <p><center>
-      <a href="/comicteca/colections/{{ colection.slug }}/add-comic/" class="btn btn-info" role="button">Add Comic</a>
+      <a href="/comicteca/colections/{{ colection.slug }}/add-comics/" class="btn btn-info" role="button">Add Comics</a>
     </center></p>
 
     <hr style="height:5px">
