Refactor of Collection templates (buttons and list)

--- a/comicteca/templates/comics/colection.html
+++ b/comicteca/templates/comics/colection.html
@@ -11,14 +11,27 @@
     {% if colection.subname %}
       <p><center>{{ colection.subname }}</center></p>
     {% endif %}
-    <br/>
+    {% if colection.colection_type == 'Regular' %}
+        <p><center>Volume {{ colection.volume }}</center></p>
+    {% endif %}
+    <hr>
     <!-- Buttons -->
     <p><center>
-      <a href="/comicteca/colections/{{ colection.slug }}/edit/" class="btn btn-info" role="button">Edit</a>
-      <a href="/comicteca/colections/{{ colection.slug }}/delete/" class="btn btn-info" role="button">Delete</a>
+      <a href="/comicteca/colections/{{ colection.slug }}/edit/" class="btn btn-info" role="button">
+        <i class="glyphicon glyphicon-pencil"></i>
+        Edit
+      </a>
+      <a href="/comicteca/colections/{{ colection.slug }}/delete/" class="btn btn-info" role="button">
+        <i class="glyphicon glyphicon-remove"></i>
+        Delete
+      </a>
     </center></p>
+
     <p><center>
-      <a href="/comicteca/colections/{{ colection.slug }}/add-comics/" class="btn btn-info" role="button">Add Comics</a>
+      <a href="/comicteca/colections/{{ colection.slug }}/add-comics/" class="btn btn-info" role="button">
+        <i class="glyphicon glyphicon-plus"></i>
+        Add Comics
+      </a>
     </center></p>
 
     <hr style="height:5px">
@@ -44,7 +57,8 @@
 {% block body_block %}
   {% if colection %}
     <h1>{{ colection_name }}
-      {% if colection.subname %} - {{ colection.subname }} {% endif %} - volume {{ colection.volume }}
+      {% if colection.colection_type == 'Regular' %} (v{{ colection.volume }})
+      {% endif %}
     </h1>
         <!-- Cover and Info -->
         <div class="container-fluid">
