--- a/comicteca/templates/comics/colection.html
+++ b/comicteca/templates/comics/colection.html
@@ -17,11 +17,11 @@
     <hr>
     <!-- Buttons -->
     <p><center>
-      <a href="/comicteca/colections/{{ colection.slug }}/edit/" class="btn btn-info" role="button">
+      <a href="/comicteca/colections/{{ colection.slug }}/edit/" class="btn btn-warning" role="button">
         <i class="glyphicon glyphicon-pencil"></i>
         Edit
       </a>
-      <a href="/comicteca/colections/{{ colection.slug }}/delete/" class="btn btn-info" role="button">
+      <a href="/comicteca/colections/{{ colection.slug }}/delete/" class="btn btn-danger" role="button">
         <i class="glyphicon glyphicon-remove"></i>
         Delete
       </a>
