--- a/comicteca/templates/comics/colection.html
+++ b/comicteca/templates/comics/colection.html
@@ -17,18 +17,18 @@
     <hr>
     <!-- Buttons -->
     <p><center>
-      <a href="/comicteca/colections/{{ colection.slug }}/edit/" class="btn btn-warning" role="button">
+      <a href="{% url 'colection_update' colection.slug %}" class="btn btn-warning" role="button">
         <i class="glyphicon glyphicon-pencil"></i>
         Edit
       </a>
-      <a href="/comicteca/colections/{{ colection.slug }}/delete/" class="btn btn-danger" role="button">
+      <a href="{% url 'colection_delete' colection.slug %}" class="btn btn-danger" role="button">
         <i class="glyphicon glyphicon-remove"></i>
         Delete
       </a>
     </center></p>
 
     <p><center>
-      <a href="/comicteca/colections/{{ colection.slug }}/add-comics/" class="btn btn-info" role="button">
+      <a href="{% url 'colection_add_comics' colection.slug %}" class="btn btn-info" role="button">
         <i class="glyphicon glyphicon-plus"></i>
         Add Comics
       </a>
