--- a/comicteca/templates/comics/colection.html
+++ b/comicteca/templates/comics/colection.html
@@ -39,14 +39,8 @@
     <h2><center>Info</center></h2>
     <p><center><u>Status:</u> <strong>{{ colection.colection_list }}</strong></center></p>
     <p><center><u>Type:</u> <strong>{{ colection.colection_type }}</strong></center></p>
-
-    <!-- TODO: Create a colection.get_pubdate for checking if defined of number 1-->
-    {% if comic.pub_date  %}
-      <p><center><u>Pub Date:</u> <strong>{{ colection.pub_date }} </strong></center></p>
-    {% else %}
-      <p><center><u>Pub Date:</u> <strong>N/A</strong></center></p>
-    {% endif %}
-
+    <p><center><u>Pub Date:</u> <strong>{{ colection.my_pub_date }} </strong></center></p>
+    <p><center><u>Format:</u> <strong>{{ colection.colection_format }}</strong></center></p>
     <p><center><u>Total Pages:</u> <strong>{{ colection.get_pages }}</strong></center></p>
     <p><center><u>Real Price:</u> <strong>{{ colection.get_currency }}</strong></center></p>
     <p><center><u>Price Paid:</u> <strong>{{ colection.get_paid }}</strong></center></p>
@@ -67,7 +61,7 @@
               <!-- Colection Image -->
               {% load thumbnail %}
               {% thumbnail colection.my_image "400" as thumb_image %}
-                <a href="{{ MEDIA_URL }}{{ colection.image }}">
+                <a href="{{ MEDIA_URL }}{{ colection.my_image }}">
                 <img src="{{ MEDIA_URL }}{{ thumb_image }}" class="image-detail" style="padding:1px;border: thin solid black;">
                 </a>
               {% endthumbnail %}
