--- a/comicteca/templates/comics/comic.html
+++ b/comicteca/templates/comics/comic.html
@@ -90,8 +90,7 @@
           </div>
          <!-- Distributor -->
          <div class="row">
-           <!-- Distributor -->
-           <h2>Distributor</h2>
+           <div class="page-header"><h2>Distributor</h2></div>
            {% if colection.distributor.image %}
              {% load thumbnail %}
                {% thumbnail colection.distributor.image "200" as thumb_image %}
@@ -108,28 +107,31 @@
          </div> <!-- Distributor row -->
          <!-- Info -->
          <div class="row">
-           <h2>Info</h2>
-           <p><u>Volume</u>: <strong>{{ colection.volume }}</strong></p>
-           <p><u>Pages</u>: <strong>{{ comic.pages }}</strong></p>
-           <p><u>Format</u>: <strong>{{ comic.format }}</strong></p>
-           <p><u>Price</u>: <strong>{{ comic.retail_price }} {{ comic.retail_unit }}</strong>
-           {% if comic.purchase_price > 0 %}
-             (paid {{ comic.purchase_price }} {{ comic.purchase_unit }})
+           <div class="page-header"><h2>Info</h2></div>
+           <!-- Labels -->
+           <h3>
+             <span class="label label-info">{{ comic.pages }} pp</span>
+             <span class="label label-info">{{ comic.get_color }}</span>
+             <span class="label label-info">{{ colection.colection_format }}</span>
+           </h3>
+           <h3>
+            <span class="label label-default">
+            <i class="glyphicon glyphicon-shopping-cart"></i>  {{ comic.retail_price }} {{ comic.retail_unit }}</span>
+            <!-- TODO: if comic.purchase_price > 0  ==> (paid {{ comic.purchase_price }} {{ comic.purchase_unit }}) -->
+           </h3>
+           <h3>
+            <span class="label label-default">
+              <i class="glyphicon glyphicon-calendar"></i>  {{ comic.get_pub_date }}
+            </span>
+           </h3>
+           {% if comic.extrainfo %}
+           <h3>
+            <a href="{{ comic.extrainfo }}" class="btn btn-default" role="button">
+                <i class="glyphicon glyphicon-link"></i>
+                Additional info
+            </a>
+           </h3>
            {% endif %}
-           </p>
-
-           <p>
-             {% if comic.pub_date  %}
-               <u>Pub Date</u>: <strong>{{ comic.pub_date }} </strong>
-             {% else %}
-               <u>Published</u>: <strong>N/A</strong>
-             {% endif %}
-           </p>
-           <p>
-             {% if comic.extrainfo %}
-               <strong><a href="{{ comic.extrainfo }}"> Additional info</a></strong>
-             {% endif %}
-           </p>
          </div> <!-- Info row -->
 
        </div> <!-- Distributor / Editor col md 6-->
