Typo error when checking "if digital"

--- a/comicteca/templates/comics/comic.html
+++ b/comicteca/templates/comics/comic.html
@@ -113,7 +113,7 @@
              <span class="label label-info">{{ comic.pages }} pp</span>
              <span class="label label-info">{{ comic.get_color }}</span>
              <span class="label label-info">{{ colection.colection_format }}</span>
-             {% if comic.extrainfo %}
+             {% if comic.digital %}
              <span class="label label-info">Digital</span>
              {% endif %}
            </h3>
