--- a/comicteca/templates/comics/comic.html
+++ b/comicteca/templates/comics/comic.html
@@ -122,11 +122,13 @@
             <i class="glyphicon glyphicon-shopping-cart"></i>  {{ comic.retail_price }} {{ comic.retail_unit }}</span>
             <!-- TODO: if comic.purchase_price > 0  ==> (paid {{ comic.purchase_price }} {{ comic.purchase_unit }}) -->
            </h3>
+           {% if comic.pub_date %}
            <h3>
             <span class="label label-default">
               <i class="glyphicon glyphicon-calendar"></i>  {{ comic.get_pub_date }}
             </span>
            </h3>
+           {% endif %}
            {% if comic.extrainfo %}
            <h3>
             <a href="{{ comic.extrainfo }}" class="btn btn-default" role="button">
