--- a/comicteca/templates/comics/comic.html
+++ b/comicteca/templates/comics/comic.html
@@ -34,7 +34,7 @@
     </center></p>
     <hr>
     <!-- List of Users -->
-    <h2><center>List</center></h2>
+    <h2><center>User List</center></h2>
     {% for user in comic.get_users %}
       <p><center>
       <a href="#" class="btn btn-info" role="button">
@@ -149,7 +149,7 @@
      <div class="row">
        <div class="col-md-12">
          {% if comic.comments  %}
-           <p><u>Comments</u>:</p>
+           <div class="panel-heading"><h3><center><u>Comments</u></center></h3></div>
            {{ comic.comments|markdown }}</li>
          {% else  %}
            <u>Comments</u>: <strong>N/A</strong></li>
@@ -163,7 +163,7 @@
    <div class="container-fluid">
      <div class="row">
        <div class="col-md-12">
-         <p><u>Colaborators</u>:</p>
+         <div class="panel-heading"><h3><center><u>Colaborators</u></center></h3></div>
          <ul>
          {% for artist,roles in comic.get_all_artists_roles %}
            <li><a href="{{ artist.get_absolute_url }}">{{ artist }}</a>
