Add new menu entry "Saga" in base template

--- a/comicteca/templates/comics/base.html
+++ b/comicteca/templates/comics/base.html
@@ -37,6 +37,7 @@
                 <li><a href="{% url 'index' %}">Home</a></li>
                 <li><a href="{% url 'colection_list' %}">Colections</a></li>
                 <li><a href="{% url 'comic_list' %}">Comics</a></li>
+                <li><a href="{% url 'saga_list' %}">Sagas</a></li>
                 <li><a href="{% url 'artist_list' %}">Authors</a></li>
                 <li><a href="{% url 'publisher_list' %}">Publishers</a></li>
                 <li><a href="{% url 'about' %}">About</a></li>
