Update real "edit button" in Saga template

--- a/comicteca/templates/comics/saga.html
+++ b/comicteca/templates/comics/saga.html
@@ -12,7 +12,7 @@
     <hr>
     <!-- Buttons -->
     <p><center>
-      <a href="{% url 'saga_list' %}" class="btn btn-warning" role="button">
+      <a href="{% url 'saga_update' saga.slug %}" class="btn btn-warning" role="button">
         <i class="glyphicon glyphicon-pencil"></i>
         Edit
       </a>
