Fix method for obtaining Saga total currency in Saga template

--- a/comicteca/templates/comics/saga.html
+++ b/comicteca/templates/comics/saga.html
@@ -35,7 +35,7 @@
     <p><center><u>Status:</u> <strong>{{ saga.get_saga_status }}</strong></center></p>
     <p><center><u>Pub Date:</u> <strong>{{ saga.get_saga_pubdate }}</strong></center></p>
     <p><center><u>Total Pages:</u> <strong>{{ saga.get_saga_totalpages }}</strong></center></p>
-    <p><center><u>Real Price:</u> <strong>{{ colection.get_currency }}</strong></center></p>
+    <p><center><u>Real Price:</u> <strong>{{ saga.get_saga_currency }}</strong></center></p>
     <p><center><u>Price Paid:</u> <strong>{{ colection.get_paid }}</strong></center></p>
 
   {% endif %}
