Fix "delete button" in Saga template

--- a/comicteca/templates/comics/saga.html
+++ b/comicteca/templates/comics/saga.html
@@ -16,7 +16,7 @@
         <i class="glyphicon glyphicon-pencil"></i>
         Edit
       </a>
-      <a href="{% url 'saga_list' %}" class="btn btn-danger" role="button">
+      <a href="{% url 'saga_delete' saga.slug %}" class="btn btn-danger" role="button">
         <i class="glyphicon glyphicon-remove"></i>
         Delete
       </a>
