--- a/comicteca/templates/comics/comic.html
+++ b/comicteca/templates/comics/comic.html
@@ -39,15 +39,27 @@
       </a>
     </center></p>
     <hr>
+    <!-- List of Sagas -->
+    {% if comic.get_sagas %}
+      <h2><center>Sagas</center></h2>
+      {% for saga in comic.get_sagas %}
+        <p><center>
+          <a href="{% url 'saga_detail' saga.slug %}" class="btn btn-info" role="button">
+          <i class="glyphicon glyphicon-tag"></i>
+          {{ saga }}
+          </a>
+        </center></p>
+      {% endfor %}
+    {% endif %}
+
     <!-- List of Users -->
     <h2><center>User List</center></h2>
     {% for user in comic.get_users %}
-      <p><center>
-      <a href="#" class="btn btn-info" role="button">
-        <i class="glyphicon glyphicon-user"></i>
-        {{ user }}
-      </a>
-      </center></p>
+      <p><center><h3>
+        <span class="label label-default">
+          <i class="glyphicon glyphicon-user"></i>  {{ user }}
+        </span>
+      </h3></center></p>
     {% endfor %}
 
   {% endif %}
