--- a/comicteca/templates/comics/comic.html
+++ b/comicteca/templates/comics/comic.html
@@ -137,9 +137,18 @@
            </h3>
            <h3>
             <span class="label label-default">
-            <i class="glyphicon glyphicon-shopping-cart"></i>  {{ comic.retail_price }} {{ comic.retail_unit }}</span>
-            <!-- TODO: if comic.purchase_price > 0  ==> (paid {{ comic.purchase_price }} {{ comic.purchase_unit }}) -->
+              <i class="glyphicon glyphicon-shopping-cart"></i>  {{ comic.retail_price }} {{ comic.retail_unit }}
+            </span>
            </h3>
+
+           {% if comic_purchase_price > 0 %}
+           <h3>
+           <span class="label label-default">
+             <i class="glyphicon glyphicon-piggy-bank"></i>  {{ comic_purchase_price }} {{ comic_purchase_unit }}
+           </span>
+           </h3>
+           {% endif %}
+
            {% if comic.pub_date %}
            <h3>
             <span class="label label-default">
