Fix "pub date" column in ComicList template

--- a/comicteca/templates/comics/comic_list.html
+++ b/comicteca/templates/comics/comic_list.html
@@ -56,7 +56,7 @@
           <td>{{ comic.pages }}</td>
           <td>{{ comic.colection.language }}</td>
           <td>{{ comic.retail_price }} {{ comic.retail_unit }}</td>
-          <td>{{ comic.colection.my_pub_date }}</td>
+          <td>{{ comic.pub_date }}</td>
         </tr>
       {% endfor %}
     </table>
